--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
   <body>
     {% include header.html %}
 
-    <div class="content-wrapper">
-      <div class="content-wrapper__inner">
+    <div class="line-1 anim-typewriter">
+      <div class="line-1 anim-typewriter">
         {{ content }}
       </div>
 
@@ -14,3 +14,5 @@
     </div>
   </body>
 </html>
+
+
