--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
   <body>
     {% include header.html %}
 
-    <div class="line-1 anim-typewriter">
-      <div class="line-1 anim-typewriter">
+    <div class="content-wrapper">
+      <div class="content-wrapper__inner">
         {{ content }}
       </div>
 
