--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+  <head>
+    <!-- Begin section for dataframe table formatting -->
+    <style type="text/css">
+    table.dataframe {
+        width: 100%;
+        height: 240px;
+        display: block;
+        overflow: auto;
+        font-family: Arial, sans-serif;
+        font-size: 13px;
+        line-height: 20px;
+        text-align: center;
+    }
+    table.dataframe th {
+      font-weight: bold;
+      padding: 4px;
+    }
+    table.dataframe td {
+      padding: 4px;
+    }
+    table.dataframe tr:hover {
+      background: #b8d1f3; 
+    }
+    </style>
+    <!-- End section for dataframe table formatting -->
 
+  {% include head.html %}
+    </head>
   <body>
     {% include header.html %}
 
